# palautusrepositorio

./: .gitignore  README.md
.github/workflows/: nhl-statistics-1-workflow.yml  web-login.yaml
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/: esimerkki2.txt
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/login-robot/: pyproject.toml
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/web-login/: pyproject.toml
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: home.robot  login.robot  login_resource.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko6/: esim1  esim2  esim3
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: MERGE.md
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  tekoaly.py
